<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context="com.brunodevesa.geoquiz.MainActivity"
              tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/content_main_tv_questionCounting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/question_hint"
            android:text="@string/questionCounting"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/content_main_tv_question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/question"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/content_main_btn_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/btn_color_normal"
            android:onClick="buttonTrueClicked"
            android:text="@string/btn_true"/>

        <Button
            android:id="@+id/content_main_tv_btn_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/btn_color_normal"
            android:onClick="buttonFalseClicked"
            android:text="@string/btn_false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/content_main_btn_previousQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/btn_color_normal"
            android:drawableLeft="@drawable/ic_left"
            android:onClick="buttonPreviousClicked"
            android:text="@string/previousQuestion"/>

        <Button
            android:id="@+id/content_main_btn_nextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/btn_color_normal"
            android:drawableRight="@drawable/ic_right"
            android:text="@string/nextQuestion"
            android:onClick="buttonNextQuestionClicked"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/content_main_tv_finalResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="40dp"
            android:text="@string/finalResult"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15sp"/>
    </LinearLayout>
</LinearLayout>
